# pytest-lf-skip

./: .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  commitlint.config.js  data.json  justfile  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/actions/setup-bot/: action.yml
.github/workflows/: _validate.yml  ci.yml  cicd.yml  coverage.yml  release.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5140905386aa5089___init___py.html  z_5140905386aa5089_constants_py.html  z_5140905386aa5089_hooks_py.html  z_5140905386aa5089_lf_skip_py.html  z_5140905386aa5089_plugin_py.html
scripts/: get-supported-py-versions.py  get_supported_py_versions.py
src/pytest_lf_skip/: constants.py  lf_skip.py  plugin.py
tests/: _constants.py  _helper.py  conftest.py  test_lf_skip.py  test_script_supported_py_version.py
